--- a/tau/demos/SDK/wearable/UIComponents/controls/progress/progress_small.css
+++ b/tau/demos/SDK/wearable/UIComponents/controls/progress/progress_small.css
@@ -15,13 +15,13 @@
 }
 
 @media all and (-tizen-geometric-shape: circle) {
-	.result{
-		-webkit-transform: translateY(-70%);
-	}
-	.ui-progressbar-small{
-		-webkit-transform: translateY(-70%);
-	}
 	.ui-footer {
 		display: none;
+	}
+	.result{
+		-webkit-transform: translate(0, -70%);
+	}
+	.ui-progressbar-small{
+		-webkit-transform: translate(0, -70%);
 	}
 }
